resources/scss/pages/_our-partner.scss
@use "../abstracts/mixins" as *;
@use "../abstracts/variables" as *;

.our-partners .hero {
  background-image: url(@/images/our-partners-bg.png);
  background-size: cover;
  background-position: center;

  .hero-content {
    position: relative;
    z-index: 2;
  }
}

.our-partners .main-partners-list {
  @include mx(-4rem);

  counter-reset: section;

  .item {
    margin-top: 4rem;
    position: relative;
    counter-increment: section;
    padding: 2rem;
    border: 1px solid rgb(104 104 104 / 15%);

    & + * {
      margin-top: 7rem;
    }

    &::before {
      content: counter(section);
      position: absolute;
      top: -5rem;
      left: 0.5rem;
      font-weight: bold;
      font-size: 8rem;
      color: #ecf1fa;
    }
  }
}

.our-partners .messaging-banks {
  margin-top: 7rem;

  .title {
    --super-section-title-font-size: xx-large;
  }

  .list {
    @include grid-cols(3);

    display: grid;
  }
}

